--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			  <ul class="navbar-nav mx-auto">
 				<li class="nav-item active">
 				  <a href="" class="nav-link text-white">
-					Home_test
+					Home
 				  </a>
 				</li>
 				<li class="nav-item">
