--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 						<section>
 							<div class="content">
 								<header>
-									<a href="#" class="icon fa-files-o"><span class="label">Icon</span></a>
+									<img src="../../images/lamedanlame.jpg" class="imagepost">
 									<h3>Ante sem integer</h3>
 								</header>
 								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
