--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 						<section>
 							<div class="content">
 								<header>
-									<a href="#" class="icon fa-floppy-o"><span class="label">Icon</span></a>
+									<img src="../../images/lfc.jpg" class="imagepost">
 									<h3>Ipsum consequat</h3>
 								</header>
 								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
@@ -106,7 +106,7 @@
 						<section>
 							<div class="content">
 								<header>
-									<a href="#" class="icon fa-line-chart"><span class="label">Icon</span></a>
+									<img src="../../images/ggmu.jpg" class="imagepost">
 									<h3>Interdum gravida</h3>
 								</header>
 								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
@@ -115,7 +115,7 @@
 						<section>
 							<div class="content">
 								<header>
-									<a href="#" class="icon fa-paper-plane-o"><span class="label">Icon</span></a>
+									<img src="../../images/ggmu2.jpg" class="imagepost">
 									<h3>Faucibus consequat</h3>
 								</header>
 								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
@@ -124,7 +124,7 @@
 						<section>
 							<div class="content">
 								<header>
-									<a href="#" class="icon fa-qrcode"><span class="label">Icon</span></a>
+									<img src="../../images/Money_Heist.jpg" class="imagepost">
 									<h3>Accumsan viverra</h3>
 								</header>
 								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
