--- a/index.html
+++ b/index.html
@@ -88,17 +88,8 @@
 						<section>
 							<div class="content">
 								<header>
-									<img src="../../images/lamedanlame.jpg" class="imagepost">
-									<h3>Ante sem integer</h3>
-								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
-							</div>
-						</section>
-						<section>
-							<div class="content">
-								<header>
-									<img src="../../images/lfc.jpg" class="imagepost">
-									<h3>Ipsum consequat</h3>
+									<img src="../../images/CR7.jpg" class="imagepost">
+									<h3>Cristioano Ronaldo</h3>
 								</header>
 								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
 							</div>
@@ -107,7 +98,7 @@
 							<div class="content">
 								<header>
 									<img src="../../images/ggmu.jpg" class="imagepost">
-									<h3>Interdum gravida</h3>
+									<h3>Man united</h3>
 								</header>
 								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
 							</div>
@@ -116,7 +107,25 @@
 							<div class="content">
 								<header>
 									<img src="../../images/ggmu2.jpg" class="imagepost">
-									<h3>Faucibus consequat</h3>
+									<h3>Man united</h3>
+								</header>
+								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+							</div>
+						</section>
+						<section>
+							<div class="content">
+								<header>
+									<img src="../../images/lamedanlame.jpg" class="imagepost">
+									<h3>Moris nu ti zil</h3>
+								</header>
+								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+							</div>
+						</section>
+						<section>
+							<div class="content">
+								<header>
+									<img src="../../images/lfc.jpg" class="imagepost">
+									<h3>Liverpool</h3>
 								</header>
 								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
 							</div>
@@ -125,7 +134,7 @@
 							<div class="content">
 								<header>
 									<img src="../../images/Money_Heist.jpg" class="imagepost">
-									<h3>Accumsan viverra</h3>
+									<h3>La casa de papel</h3>
 								</header>
 								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
 							</div>
