--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 						<p>In arcu accumsan arcu adipiscing accumsan orci ac. Felis id enim aliquet. Accumsan ac integer lobortis commodo ornare aliquet accumsan erat tempus amet porttitor.</p>
 					</header>
 					<div class="highlights">
-						<section>
+<!-- 						<section>
 							<div class="content">
 								<header>
 									<img src="../../images/img1.jpg" class="imagepost">
@@ -84,7 +84,7 @@
 								</header>
 								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
 							</div>
-						</section>
+						</section> -->
 						<section>
 							<div class="content">
 								<header>
