--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<body style="padding-top: 0">
 
 		<!-- Nav -->
-		<nav class="navbar navbar-expand-md navbar-light bg-dark">
+		<nav class="navbar navbar-expand-lg navbar-light bg-dark">
 			
 			<a style="color:white;" class="logo" href="index.html">CO<span class='letter_red'>R</span>E<span class='letter_red'>97</span></a>
 				
@@ -72,8 +72,8 @@
 			<section class="wrapper">
 				<div class="inner">
 					<header class="special">
-						<h2>Sem turpis amet semper</h2>
-						<p>In arcu accumsan arcu adipiscing accumsan orci ac. Felis id enim aliquet. Accumsan ac integer lobortis commodo ornare aliquet accumsan erat tempus amet porttitor.</p>
+						<h2>HOT LIST</h2>
+						<p>Our Special designs available just for you.</p>
 					</header>
 					<div class="highlights">
 <!-- 						<section>
@@ -89,18 +89,21 @@
 							<div class="content">
 								<header>
 									<img src="../../images/CR7.jpg" class="imagepost">
-									<h3>Cristioano Ronaldo</h3>
+									<h3>CR 7</h3>
 								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+								<p>Cristiano Ronaldo is back home, grab your CR7 Tshirt. (Black or White)
+								</br> Size: XS - S - M - L - XL</p>
+								
 							</div>
 						</section>
 						<section>
 							<div class="content">
 								<header>
-									<img src="../../images/ggmu.jpg" class="imagepost">
+									<img src="../../images/ggmu.jpg" class="imagepost"> 	
 									<h3>Man united</h3>
 								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+								<p>Unique Tshirt design just for our Manchester united fans! (White)
+								</br> Size: XS - S - M - L - XL</p>
 							</div>
 						</section>
 						<section>
@@ -109,7 +112,8 @@
 									<img src="../../images/ggmu2.jpg" class="imagepost">
 									<h3>Man united</h3>
 								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+								<p>Unique Tshirt design just for our Manchester united fans! (Black)
+								</br> Size: XS - S - M - L - XL</p>
 							</div>
 						</section>
 						<section>
@@ -118,7 +122,9 @@
 									<img src="../../images/lamedanlame.jpg" class="imagepost">
 									<h3>Moris nu ti zil</h3>
 								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+								<p>Si twa si to fier nu ti zil.
+									<br> (Black)
+								</br> Size: XS - S - M - L - XL</p>
 							</div>
 						</section>
 						<section>
@@ -127,7 +133,8 @@
 									<img src="../../images/lfc.jpg" class="imagepost">
 									<h3>Liverpool</h3>
 								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+								<p>Unique Tshirt design just for our Liverpool fans! (Black)
+								</br> Size: XS - S - M - L - XL</p>
 							</div>
 						</section>
 						<section>
@@ -136,7 +143,8 @@
 									<img src="../../images/Money_Heist.jpg" class="imagepost">
 									<h3>La casa de papel</h3>
 								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+								<p>Money Heist is back with Season 5. Grab your tshirt and Get ready for some actions! (Black)
+								</br> Size: XS - S - M - L - XL</p>
 							</div>
 						</section>
 					</div>
@@ -146,13 +154,13 @@
 		<!-- CTA -->
 			<section id="cta" class="wrapper">
 				<div class="inner">
-					<h2>Curabitur ullamcorper ultricies</h2>
-					<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing. Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing sed feugiat eu faucibus. Integer ac sed amet praesent. Nunc lacinia ante nunc ac gravida.</p>
+					<h2 style="color:black;font-weight: 500;">PRODUCTS QUALITY:</h2>
+					<p style="color:rgba(2, 1, 1, 0.57);font-weight: 500;">We ensure that our products are made of high quality materials and high quality printing. </p>
 				</div>
 			</section>
 
 		<!-- Testimonials -->
-			<section class="wrapper">
+			<!-- <section class="wrapper">
 				<div class="inner">
 					<header class="special">
 						<h2>Faucibus consequat lorem</h2>
@@ -200,7 +208,7 @@
 						</section>
 					</div>
 				</div>
-			</section>
+			</section> -->
 
 <!-- Footer -->
 			<footer id="footer">
@@ -222,9 +230,9 @@
 						<section>
 							<h4>Follow us</h4>
 							<ul class="plain">
-								<li><a href="#"><i class="icon fa-twitter">&nbsp;</i>Twitter</a></li>
+								<li><a href="https://api.WhatsApp.com/send?57099624"><i class="icon fa-twitter">&nbsp;</i>Twitter</a></li>
 								<li><a href="#"><i class="icon fa-facebook">&nbsp;</i>Facebook</a></li>
-								<li><a href="#"><i class="icon fa-instagram">&nbsp;</i>Instagram</a></li>
+								<li><a href="https://www.instagram.com/core_97/"><i class="icon fa-instagram">&nbsp;</i>Instagram</a></li>
 							</ul>
 						</section>
 					</div>
