--- a/index.html
+++ b/index.html
@@ -230,9 +230,9 @@
 						<section>
 							<h4>Follow us</h4>
 							<ul class="plain">
-								<li><a href="#"><i class="icon fa-twitter">&nbsp;</i>Twitter</a></li>
+								<li><a href="https://api.WhatsApp.com/send?57099624"><i class="icon fa-twitter">&nbsp;</i>Twitter</a></li>
 								<li><a href="#"><i class="icon fa-facebook">&nbsp;</i>Facebook</a></li>
-								<li><a href="#"><i class="icon fa-instagram">&nbsp;</i>Instagram</a></li>
+								<li><a href="https://www.instagram.com/core_97/"><i class="icon fa-instagram">&nbsp;</i>Instagram</a></li>
 							</ul>
 						</section>
 					</div>
