--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 				<div class="inner">
 					<header class="special">
 						<h2>HOT LIST</h2>
-						<p>Our Special designs available just for you.</p>
+						<p>Our unique and special designs available just for you.</p>
 					</header>
 					<div class="highlights">
 <!-- 						<section>
@@ -148,14 +148,22 @@
 							</div>
 						</section>
 					</div>
+
+					<div class="buttonContainer">
+						<button type="button" class="btn btn-light">
+								<a href="products.html" class="btn btn-light">
+									More products
+								</a> 
+						</button>						
+					</div>
 				</div>
 			</section>
 
 		<!-- CTA -->
 			<section id="cta" class="wrapper">
 				<div class="inner">
-					<h2 style="color:black;font-weight: 500;">PRODUCTS QUALITY:</h2>
-					<p style="color:rgba(2, 1, 1, 0.57);font-weight: 500;">We ensure that our products are made of high quality materials and high quality printing. </p>
+					<h2 style="color:rgb(255, 255, 255);font-weight: 500;">PRODUCTS QUALITY:</h2>
+					<p style="color:rgb(255, 255, 255);font-weight: 600;font-size: 1.5rem;">We ensure that our products are made of high quality materials and high quality printing <br>just for your complete satisfaction. </p>
 				</div>
 			</section>
 
