--- a/contact_us.html
+++ b/contact_us.html
@@ -135,13 +135,13 @@
 		<!-- CTA -->
 			<section id="cta" class="wrapper">
 				<div class="inner">
-					<h2>Curabitur ullamcorper ultricies</h2>
-					<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing. Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing sed feugiat eu faucibus. Integer ac sed amet praesent. Nunc lacinia ante nunc ac gravida.</p>
+					<h2 style="color:rgba(255, 255, 255, 0.816);font-weight: 500;">PRODUCTS QUALITY:</h2>
+					<p style="color:rgb(255, 255, 255);font-weight: 600;font-size: 1.5rem;">We ensure that our products are made of high quality materials and high quality printing <br>just for your complete satisfaction. </p>
 				</div>
 			</section>
 
 		<!-- Testimonials -->
-			<section class="wrapper">
+			<!-- <section class="wrapper">
 				<div class="inner">
 					<header class="special">
 						<h2>Faucibus consequat lorem</h2>
@@ -189,39 +189,39 @@
 						</section>
 					</div>
 				</div>
-			</section>
+			</section> -->
 
 <!-- Footer -->
-			<footer id="footer">
-				<div class="inner">
-					<div class="content">
-						<section>
-							<h3>About CORE97</h3>
-							<p>CORE97 is a new clothing company started in 2021. Our aim is to provide you a high quality and long lasting product. The satisfaction of our clients is our top priority.</p>
-						</section>
-						<section>
-							<h4>Support</h4>
-							<ul class="alt">
-								<li><a href="#">Help Center</a></li>
-								<li><a href="#">Safety center</a></li>
-								<li><a href="#">Community Guidelines</a></li>
-								<li><a href="#">Transparency</a></li>
-							</ul>
-						</section>
-						<section>
-							<h4>Follow us</h4>
-							<ul class="plain">
-								<li><a href="#"><i class="icon fa-twitter">&nbsp;</i>Twitter</a></li>
-								<li><a href="#"><i class="icon fa-facebook">&nbsp;</i>Facebook</a></li>
-								<li><a href="#"><i class="icon fa-instagram">&nbsp;</i>Instagram</a></li>
-							</ul>
-						</section>
-					</div>
-					<div class="copyright">
-						&copy; CORE97
-					</div>
-				</div>
-			</footer>
+<footer id="footer">
+	<div class="inner">
+		<div class="content">
+			<section>
+				<h3>About CORE97</h3>
+				<p>CORE97 is a new clothing company started in 2021. Our aim is to provide you a high quality and long lasting product. The satisfaction of our clients is our top priority.</p>
+			</section>
+			<section>
+				<h4>Support</h4>
+				<ul class="alt">
+					<li><a href="#">Help Center</a></li>
+					<li><a href="#">Safety center</a></li>
+					<li><a href="#">Community Guidelines</a></li>
+					<li><a href="#">Transparency</a></li>
+				</ul>
+			</section>
+			<section>
+				<h4>Follow us</h4>
+				<ul class="plain">
+					<li><a href="https://api.WhatsApp.com/send?57099624"><i class="icon fa-whatsapp">&nbsp;</i>WhatsApp</a></li>
+					<li><a href="https://www.facebook.com/Core97wears/"><i class="icon fa-facebook">&nbsp;</i>Facebook</a></li>
+					<li><a href="https://www.instagram.com/core_97/"><i class="icon fa-instagram">&nbsp;</i>Instagram</a></li>
+				</ul>
+			</section>
+		</div>
+		<div class="copyright">
+			&copy; CORE97
+		</div>
+	</div>
+</footer>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
