--- a/products.html
+++ b/products.html
@@ -144,37 +144,37 @@
 
 		
 
-<!-- Footer -->
-			<footer id="footer">
-				<div class="inner">
-					<div class="content">
-						<section>
-							<h3>About CORE97</h3>
-							<p>CORE97 is a new clothing company started in 2021. Our aim is to provide you a high quality and long lasting product. The satisfaction of our clients is our top priority.</p>
-						</section>
-						<section>
-							<h4>Support</h4>
-							<ul class="alt">
-								<li><a href="#">Help Center</a></li>
-								<li><a href="#">Safety center</a></li>
-								<li><a href="#">Community Guidelines</a></li>
-								<li><a href="#">Transparency</a></li>
-							</ul>
-						</section>
-						<section>
-							<h4>Follow us</h4>
-							<ul class="plain">
-								<li><a href="#"><i class="icon fa-twitter">&nbsp;</i>Twitter</a></li>
-								<li><a href="#"><i class="icon fa-facebook">&nbsp;</i>Facebook</a></li>
-								<li><a href="#"><i class="icon fa-instagram">&nbsp;</i>Instagram</a></li>
-							</ul>
-						</section>
-					</div>
-					<div class="copyright">
-						&copy; CORE97
-					</div>
+		<!-- Footer -->
+		<footer id="footer">
+			<div class="inner">
+				<div class="content">
+					<section>
+						<h3>About CORE97</h3>
+						<p>CORE97 is a new clothing company started in 2021. Our aim is to provide you a high quality and long lasting product. The satisfaction of our clients is our top priority.</p>
+					</section>
+					<section>
+						<h4>Support</h4>
+						<ul class="alt">
+							<li><a href="#">Help Center</a></li>
+							<li><a href="#">Safety center</a></li>
+							<li><a href="#">Community Guidelines</a></li>
+							<li><a href="#">Transparency</a></li>
+						</ul>
+					</section>
+					<section>
+						<h4>Follow us</h4>
+						<ul class="plain">
+							<li><a href="https://api.WhatsApp.com/send?57099624"><i class="icon fa-whatsapp">&nbsp;</i>WhatsApp</a></li>
+							<li><a href="https://www.facebook.com/Core97wears/"><i class="icon fa-facebook">&nbsp;</i>Facebook</a></li>
+							<li><a href="https://www.instagram.com/core_97/"><i class="icon fa-instagram">&nbsp;</i>Instagram</a></li>
+						</ul>
+					</section>
 				</div>
-			</footer>
+				<div class="copyright">
+					&copy; CORE97
+				</div>
+			</div>
+		</footer>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
