--- a/contact_us.html
+++ b/contact_us.html
@@ -60,14 +60,70 @@
 		<!-- Banner -->
 			<section id="banner">
 				<div class="inner">
-					<h1>About</h1>
+					<h1>Contact</h1>
 					<h1>CO<span class='letter_red'>R</span>E<span class='letter_red'>97</span></h1>
 				</div>
 				<video autoplay loop muted playsinline src="images/banner.mp4"></video>
 			</section>
+		
+		<!--Contact us-->
+		<!--VERSION1-->
+
+
+
+		<!--VERSION2-->
+		<!-- <section class="contact">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-6">
+						<div class="card">
+							<div class="card-body">
+								<div class="row">
+									<div class="col-lg-12">
+										<div class="head">
+											<h3>Contact Us</h3>
+										</div>
+									</div>
+								</div>
+								<div class="form p-3">
+									<div class="form-row my-5">
+										<div class="col-lg-6">
+											<input type="text" class="effect-1" placeholder="First Name">
+											<span class="focus-border"></span>
+										</div>
+										<div class="col-lg-6 my-5">
+											<input type="text" class="effect-1" placeholder="Last Name">
+											<span class="focus-border"></span>
+										</div>
+									</div>
+									<div class="form-row pb-5">
+										<div class="col-lg-12">
+											<input type="text" class="effect-1" placeholder="Email Address">
+											<span class="focus-border"></span>
+										</div>
+									</div>
+									<div class="form-row pb-5">
+										<div class="col-lg-12">
+											<input type="text" class="effect-1" placeholder="Message">
+											<span class="focus-border"></span>
+										</div>
+									</div>
+									<div class="form-row">
+										<div class="offset-2 col-lg-4">
+											<button class="btn1">SEND MESSAGE</button>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section> -->
+		
 
 		<!-- Highlights -->
-			<section class="wrapper">
+			<!-- <section class="wrapper">
 				<div class="inner">
 					<header class="special">
 						<h2>Sem turpis amet semper</h2>
@@ -130,7 +186,7 @@
 						</section>
 					</div>
 				</div>
-			</section>
+			</section> -->
 
 		<!-- CTA -->
 			<section id="cta" class="wrapper">
