--- a/contact_us.html
+++ b/contact_us.html
@@ -1,291 +1,79 @@
-<!DOCTYPE HTML>
-<!--
-	Industrious by TEMPLATED
-	templated.co @templatedco
-	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
--->
-<html>
-	<head>
-		<title>Core97</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-	</head>
-	<body style="padding-top: 0">
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="contact form example">
+    <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.6/build/pure-min.css" integrity="sha384-Uu6IeWbM+gzNVXJcM9XV3SohHtmWE+3VGi496jvgX1jyvDTXfdK+rfZc8C1Aehk5" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Contact Form Example</title>
+</head>
 
-		<!-- Nav -->
-		<nav class="navbar navbar-expand-md navbar-light bg-dark">
-			
-			<a style="color:white;" class="logo" href="index.html">CO<span class='letter_red'>R</span>E<span class='letter_red'>97</span></a>
-				
-			<button 
-			type="button" 
-			data-bs-toggle="collapse" 
-			data-bs-target="#navbarNav"
-			class="navbar-toggler navbar-dark" 
-			aria-controls="navbarNav"
-			aria-expanded="false"
-			aria-label="Toggle navigation">
-			  <span class="navbar-toggler-icon"></span>
-			</button>
-			
-			<div 
-			  class="collapse navbar-collapse" 
-			  id="navbarNav"
-			  style="padding-right: 110px;">
-			  <ul class="navbar-nav mx-auto">
-				<li class="nav-item">
-				  <a href="index.html" class="nav-link text-white">
-					Home
-				  </a>
-				</li>
-				<li class="nav-item">
-				  <a href="products.html" class="nav-link text-white">
-					Products
-				  </a>
-				</li>
-				<li class="nav-item active">
-				  <a href="" class="nav-link text-white">
-					Contact us
-				  </a>
-				</li>
-			  </ul>
-			</div>
+<body>
+  <h2 class="content-head is-center">Contact Us!</h2>
+  <aside>
+       <p>
+           We would <em>love</em> to hear from you! </p>
+           <p>Please use the <b><em>Contact Form</em></b>
+           to send us a message.
+       </p>
+   </aside>
 
-		  </nav>
-		
-		<!-- Banner -->
-			<section id="banner">
-				<div class="inner">
-					<h1>Contact</h1>
-					<h1>CO<span class='letter_red'>R</span>E<span class='letter_red'>97</span></h1>
-				</div>
-				<video autoplay loop muted playsinline src="images/banner.mp4"></video>
-			</section>
-		
-		<!--Contact us-->
-		<!--VERSION1-->
+<!-- START HERE -->
+   <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css">
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+   <!-- Style The Contact Form How Ever You Prefer -->
+   <link rel="stylesheet" href="assets/css/contact-us-style.css">
 
+  <form class="gform pure-form pure-form-stacked" method="POST" data-email="example@email.net"
+  action="https://script.google.com/macros/s/AKfycbz6-CZxzM6dS5qVMJuBnC7P1Ie3NeDvHhyknV0HuSn23sdOU1TIeURzysJR_TuKIg8xsw/exec">
+    <!-- change the form action to your script url -->
 
+    <div class="form-elements">
+      <fieldset class="pure-group">
+        <label for="name">Name: </label>
+        <input id="name" name="name" placeholder="Your name" />
+      </fieldset>
 
-		<!--VERSION2-->
-		<!-- <section class="contact">
-			<div class="container">
-				<div class="row">
-					<div class="col-lg-6">
-						<div class="card">
-							<div class="card-body">
-								<div class="row">
-									<div class="col-lg-12">
-										<div class="head">
-											<h3>Contact Us</h3>
-										</div>
-									</div>
-								</div>
-								<div class="form p-3">
-									<div class="form-row my-5">
-										<div class="col-lg-6">
-											<input type="text" class="effect-1" placeholder="First Name">
-											<span class="focus-border"></span>
-										</div>
-										<div class="col-lg-6 my-5">
-											<input type="text" class="effect-1" placeholder="Last Name">
-											<span class="focus-border"></span>
-										</div>
-									</div>
-									<div class="form-row pb-5">
-										<div class="col-lg-12">
-											<input type="text" class="effect-1" placeholder="Email Address">
-											<span class="focus-border"></span>
-										</div>
-									</div>
-									<div class="form-row pb-5">
-										<div class="col-lg-12">
-											<input type="text" class="effect-1" placeholder="Message">
-											<span class="focus-border"></span>
-										</div>
-									</div>
-									<div class="form-row">
-										<div class="offset-2 col-lg-4">
-											<button class="btn1">SEND MESSAGE</button>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section> -->
-		
+      <fieldset class="pure-group">
+        <label for="message">Message: </label>
+        <textarea id="message" name="message" rows="10"
+        placeholder="Tell us what's on your mind..."></textarea>
+      </fieldset>
 
-		<!-- Highlights -->
-			<!-- <section class="wrapper">
-				<div class="inner">
-					<header class="special">
-						<h2>Sem turpis amet semper</h2>
-						<p>In arcu accumsan arcu adipiscing accumsan orci ac. Felis id enim aliquet. Accumsan ac integer lobortis commodo ornare aliquet accumsan erat tempus amet porttitor.</p>
-					</header>
-					<div class="highlights">
-						<section>
-							<div class="content">
-								<header>
-									<a href="#" class="icon fa-vcard-o"><span class="label">Icon</span></a>
-									<h3>Feugiat consequat</h3>
-								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
-							</div>
-						</section>
-						<section>
-							<div class="content">
-								<header>
-									<a href="#" class="icon fa-files-o"><span class="label">Icon</span></a>
-									<h3>Ante sem integer</h3>
-								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
-							</div>
-						</section>
-						<section>
-							<div class="content">
-								<header>
-									<a href="#" class="icon fa-floppy-o"><span class="label">Icon</span></a>
-									<h3>Ipsum consequat</h3>
-								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
-							</div>
-						</section>
-						<section>
-							<div class="content">
-								<header>
-									<a href="#" class="icon fa-line-chart"><span class="label">Icon</span></a>
-									<h3>Interdum gravida</h3>
-								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
-							</div>
-						</section>
-						<section>
-							<div class="content">
-								<header>
-									<a href="#" class="icon fa-paper-plane-o"><span class="label">Icon</span></a>
-									<h3>Faucibus consequat</h3>
-								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
-							</div>
-						</section>
-						<section>
-							<div class="content">
-								<header>
-									<a href="#" class="icon fa-qrcode"><span class="label">Icon</span></a>
-									<h3>Accumsan viverra</h3>
-								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
-							</div>
-						</section>
-					</div>
-				</div>
-			</section> -->
+      <fieldset class="pure-group">
+        <label for="email"><em>Your</em> Email Address:</label>
+        <input id="email" name="email" type="email" value=""
+        required placeholder="your.name@email.com"/>
+      </fieldset>
 
-		<!-- CTA -->
-			<section id="cta" class="wrapper">
-				<div class="inner">
-					<h2 style="color:rgba(255, 255, 255, 0.816);font-weight: 500;">PRODUCTS QUALITY:</h2>
-					<p style="color:rgb(255, 255, 255);font-weight: 600;font-size: 1.5rem;">We ensure that our products are made of high quality materials and high quality printing <br>just for your complete satisfaction. </p>
-				</div>
-			</section>
+       <!-- <fieldset class="pure-group">
+        <label for="color">Other info: </label>
+        <input id="color" name="color" placeholder="other info" />
+      </fieldset>  -->
 
-		<!-- Testimonials -->
-			<!-- <section class="wrapper">
-				<div class="inner">
-					<header class="special">
-						<h2>Faucibus consequat lorem</h2>
-						<p>In arcu accumsan arcu adipiscing accumsan orci ac. Felis id enim aliquet. Accumsan ac integer lobortis commodo ornare aliquet accumsan erat tempus amet porttitor.</p>
-					</header>
-					<div class="testimonials">
-						<section>
-							<div class="content">
-								<blockquote>
-									<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
-								</blockquote>
-								<div class="author">
-									<div class="image">
-										<img src="images/pic01.jpg" alt="" />
-									</div>
-									<p class="credit">- <strong>Jane Doe</strong> <span>CEO - ABC Inc.</span></p>
-								</div>
-							</div>
-						</section>
-						<section>
-							<div class="content">
-								<blockquote>
-									<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
-								</blockquote>
-								<div class="author">
-									<div class="image">
-										<img src="images/pic03.jpg" alt="" />
-									</div>
-									<p class="credit">- <strong>John Doe</strong> <span>CEO - ABC Inc.</span></p>
-								</div>
-							</div>
-						</section>
-						<section>
-							<div class="content">
-								<blockquote>
-									<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
-								</blockquote>
-								<div class="author">
-									<div class="image">
-										<img src="images/pic02.jpg" alt="" />
-									</div>
-									<p class="credit">- <strong>Janet Smith</strong> <span>CEO - ABC Inc.</span></p>
-								</div>
-							</div>
-						</section>
-					</div>
-				</div>
-			</section> -->
+       <fieldset class="pure-group honeypot-field">
+        <label for="honeypot">To help avoid spam, utilize a Honeypot technique with a hidden text field; must be empty to submit the form! Otherwise, we assume the user is a spam bot.</label>
+        <input id="honeypot" type="text" name="honeypot" value="" />
+      </fieldset>  
 
-<!-- Footer -->
-<footer id="footer">
-	<div class="inner">
-		<div class="content">
-			<section>
-				<h3>About CORE97</h3>
-				<p>CORE97 is a new clothing company started in 2021. Our aim is to provide you a high quality and long lasting product. The satisfaction of our clients is our top priority.</p>
-			</section>
-			<section>
-				<h4>Support</h4>
-				<ul class="alt">
-					<li><a href="#">Help Center</a></li>
-					<li><a href="#">Safety center</a></li>
-					<li><a href="#">Community Guidelines</a></li>
-					<li><a href="#">Transparency</a></li>
-				</ul>
-			</section>
-			<section>
-				<h4>Follow us</h4>
-				<ul class="plain">
-					<li><a href="https://api.WhatsApp.com/send?57099624"><i class="icon fa-whatsapp">&nbsp;</i>WhatsApp</a></li>
-					<li><a href="https://www.facebook.com/Core97wears/"><i class="icon fa-facebook">&nbsp;</i>Facebook</a></li>
-					<li><a href="https://www.instagram.com/core_97/"><i class="icon fa-instagram">&nbsp;</i>Instagram</a></li>
-				</ul>
-			</section>
-		</div>
-		<div class="copyright">
-			&copy; CORE97
-		</div>
-	</div>
-</footer>
+      <button class="button-success pure-button button-xlarge">
+        <i class="fa fa-paper-plane"></i>&nbsp;Send</button>
+    </div>
+    <!-- Customise the Thankyou Message People See when they submit the form: -->
+    <div class="thankyou_message" style="display:none;text-align: center;">
+      <h2><em>Thanks</em> for contacting us!
+        We will get back to you soon!</h2>
+      <br>
+      <button onclick="index.html" class="back">Home</button>
+    </div>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+  </form>
 
-	</body>
+  <!-- Submit the Form to Google Using "AJAX" -->
+  <script data-cfasync="false" src="form-submission-handler.js"></script>
+  <script data-cfasync="false" type="text/javascript" src="./assets/js/form-submission-handler.js"></script>
+<!-- END -->
+
+</body>
 </html>
