finalising contact us page

--- a/contact_us.html
+++ b/contact_us.html
@@ -132,11 +132,11 @@
       <div class="buttonContainer">
         <!-- <button onclick="" class="button-success pure-button button-xlarge back">Close</button> -->
         <div class="buttonContainer">
-          
+          <button type="button" class="btn btn-light back">
               <a href="index.html" class="btn btn-light back">
                 Close
               </a> 
-        					
+          </button>
         </div>
       </div>
     </div>
