--- a/products.html
+++ b/products.html
@@ -58,7 +58,7 @@
 		  </nav>
 		
 		<!-- Banner -->
-<!-- 			<section id="banner" s>
+ 			<!-- <section id="banner">
 				<div class="inner">
 					<h1>CO<span class='letter_red'>R</span>E<span class='letter_red'>97</span></h1>
 					<p id="banner-paragraph">
@@ -71,12 +71,12 @@
 		<!-- Highlights -->
 			<section class="wrapper">
 				<div class="inner">
-					<header class="special">
+					<!-- <header class="special">
 						<h2>Products we offer</h2>
 						<p><i>"The secret of great style is to feel good in what you wear."</i></p>
-					</header>
+					</header> -->
 					<div class="highlights">
-						<section>
+						<!-- <section>
 							<div class="content">
 								<header>
 									<a href="#" class="icon fa-vcard-o"><span class="label">Icon</span></a>
@@ -129,18 +129,30 @@
 								</header>
 								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
 							</div>
-						</section>
+						</section> -->
+						<div class="inner"  style="text-align: center;">
+							<section class="wrapper">
+								<div class="inner"  style="text-align: center;">
+									<header class="special">
+										<h1><i class="icon fa-wrench"></i></h1>
+										<br>
+										<br>
+										<h2>Website under construction...</h2>
+									</header>
+								</div>
+							</section>
+						</div>
 					</div>
 				</div>
 			</section>
 
 		<!-- CTA -->
-			<section id="cta" class="wrapper">
+			<!-- <section id="cta" class="wrapper">
 				<div class="inner">
 					<h2>Curabitur ullamcorper ultricies</h2>
 					<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing. Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing sed feugiat eu faucibus. Integer ac sed amet praesent. Nunc lacinia ante nunc ac gravida.</p>
 				</div>
-			</section>
+			</section> -->
 
 		
 
@@ -155,16 +167,16 @@
 					<section>
 						<h4>Support</h4>
 						<ul class="alt">
-							<li><a href="#">Help Center</a></li>
-							<li><a href="#">Safety center</a></li>
+							<li><a href="contact_us.html">Contact us</a></li>
+							<!-- <li><a href="#">Safety center</a></li>
 							<li><a href="#">Community Guidelines</a></li>
-							<li><a href="#">Transparency</a></li>
+							<li><a href="#">Transparency</a></li> -->
 						</ul>
 					</section>
 					<section>
 						<h4>Follow us</h4>
 						<ul class="plain">
-							<li><a href="https://api.WhatsApp.com/send?57099624"><i class="icon fa-whatsapp">&nbsp;</i>WhatsApp</a></li>
+							<li><a href="https://api.WhatsApp.com/send?57099624"><i class="icon fa-whatsapp">&nbsp;</i>+230-57099624</a></li>
 							<li><a href="https://www.facebook.com/Core97wears/"><i class="icon fa-facebook">&nbsp;</i>Facebook</a></li>
 							<li><a href="https://www.instagram.com/core_97/"><i class="icon fa-instagram">&nbsp;</i>Instagram</a></li>
 						</ul>
