--- a/index.html
+++ b/index.html
@@ -229,16 +229,16 @@
 						<section>
 							<h4>Support</h4>
 							<ul class="alt">
-								<li><a href="#">Help Center</a></li>
-								<li><a href="#">Safety center</a></li>
+								<li><a href="contact_us.html">Contact us</a></li>
+								<!-- <li><a href="#">Safety center</a></li>
 								<li><a href="#">Community Guidelines</a></li>
-								<li><a href="#">Transparency</a></li>
+								<li><a href="#">Transparency</a></li> -->
 							</ul>
 						</section>
 						<section>
 							<h4>Follow us</h4>
 							<ul class="plain">
-								<li><a href="https://api.WhatsApp.com/send?57099624"><i class="icon fa-whatsapp">&nbsp;</i>WhatsApp</a></li>
+								<li><a href="https://api.WhatsApp.com/send?57099624"><i class="icon fa-whatsapp">&nbsp;</i>+230-57099624</a></li>
 								<li><a href="https://www.facebook.com/Core97wears/"><i class="icon fa-facebook">&nbsp;</i>Facebook</a></li>
 								<li><a href="https://www.instagram.com/core_97/"><i class="icon fa-instagram">&nbsp;</i>Instagram</a></li>
 							</ul>
